--- a/styles.css
+++ b/styles.css
@@ -64,8 +64,8 @@ main{
 }
 
 .main__sun:hover{
-    width: 82rem;
-    height: 82rem; 
+    width: 81rem;
+    height: 81rem; 
     transition-duration: .5s;
     
 }
@@ -127,6 +127,19 @@ main{
     background-color: #C7AA72;
     border-radius: 50%;
     transition-duration: .5s;
+    position: relative;
+}
+
+.planetRing{
+    width: 13.63944rem;
+    height: 0.34381rem; 
+    background-color: rgba(255, 255, 255, 0.40);
+    transform: rotate(-30deg); 
+    border-radius: 70%;
+    position: absolute;
+    top: 50%;
+    left: -25%;
+    transition: transform .5s;
 }
 
 .main__uranus{
@@ -182,6 +195,10 @@ main{
     height: 10rem;  
     transition-duration: .5s;
 }
+.main__saturn:hover .planetRing{
+    transform: rotate(-30deg) scale(1.1);
+    transition: transform .5s;
+}
 
 .main__uranus:hover{
     width: 5rem;
@@ -193,4 +210,99 @@ main{
     width: 5rem;
     height: 5rem;  
     transition-duration: .5s;
+}
+/**************************/
+section{
+    display: none;
+    margin-top: -70.3rem;
+    position: absolute;
+    width: 100%;
+    height: 70.3rem; 
+    background: linear-gradient(90deg, #0C164D 0%, #190B22 100%);
+    /* display: flex; */
+}
+
+.section__planet{
+    width: 79.875rem;
+    height: 79.875rem;
+    border-radius: 50%;
+    background: #428ED4;
+    margin-top: -11rem;
+    margin-left: -70rem;
+    position: relative;
+}
+
+.section__planet::before{
+    content: "";
+    position: absolute;
+    width: calc(100% + 4rem);
+    height: calc(100% + 4rem);
+    border-radius: 50%;
+    border: 2rem solid rgba(66, 142, 212, 0.1);
+    box-shadow: 0 0 0 2rem rgba(66, 142, 212, 0.06);
+    box-sizing: border-box;
+    margin-top: -2rem;
+    margin-left: -2.1rem;
+}
+
+.section__container{
+    width: 50%;
+    margin: 0 auto;
+    color: white;
+    height: 56.25rem; 
+    margin-top: 5rem;
+}
+
+.section__title{
+    color: #FFF;
+    font-family: Secular One;
+    font-size: 3.75rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; /* 3.75rem */
+    letter-spacing: 0.3375rem;
+    padding-bottom: 1rem;
+}
+
+.section__undertitle{
+    color: #FFD029;
+    font-family: Lora;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; /* 1.5rem */
+    letter-spacing: 0.9rem;
+    padding-bottom: 1rem;
+}
+
+.section__info{
+    padding-bottom: 2rem;
+    border-bottom: .5px rgba(255, 255, 255, 0.493) solid;
+    width: 80%;
+}
+
+section p{
+    font-family: Roboto Condensed;
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 170%;
+}
+
+.section__infoContainer{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 2rem;
+    border-bottom: .5px rgba(255, 255, 255, 0.493) solid;
+    padding-bottom: 2rem;
+    width: 80%;
+}
+
+.section__infoContainer article:nth-child(2){
+    margin-right: 13rem;
+}
+
+.section__moontitles{
+    padding-top: 2rem;
+
 }
