--- a/styles.css
+++ b/styles.css
@@ -297,3 +297,10 @@ section p{
     padding-top: 2rem;
 
 }
+
+.section__getBackToMainPage{
+    padding-top: 10%;
+    text-align: center;
+    margin-right: 10rem;
+    font-size: 12px;
+}
