--- a/styles.css
+++ b/styles.css
@@ -267,6 +267,16 @@ section{
     width: 80%;
 }
 
+section h3{
+    color: #FFF;
+    font-family: Secular One;
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; /* 1.125rem */
+    letter-spacing: 0.10125rem; 
+}
+
 section p{
     color: #FFF;
     font-family: Roboto Condensed;
