--- a/styles.css
+++ b/styles.css
@@ -227,6 +227,14 @@ section{
     width: 100%;
     height: 70.3rem; 
     background: linear-gradient(90deg, #0C164D 0%, #190B22 100%);
+    background-image:
+    radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 10px),
+    radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 15px),
+    radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 15px),
+    radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 10px);
+    background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+    background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
+    background-color: #0C164D;
 }
 
 .section__planet{
